# TODO

./: .gitignore  Dockerfile  docker-compose.yml  gunicorn_conf.py  pyproject.toml  todo.db
app/: config.py  main.py  static_values.py
app/routers/todos/: models.py  todos.py
app/utilities/: db.py  logger.py
